tests/baselines/reference/nonPrimitiveAccessProperty.errors.txt
tests/cases/conformance/types/nonPrimitive/nonPrimitiveAccessProperty.ts(3,3): error TS2339: Property 'nonExist' does not exist on type 'object'.


==== tests/cases/conformance/types/nonPrimitive/nonPrimitiveAccessProperty.ts (1 errors) ====
    var a: object;
    a.toString();
    a.nonExist(); // error
      ~~~~~~~~
!!! error TS2339: Property 'nonExist' does not exist on type 'object'.
    